manifests/test/cilium/Endpoints-cilium-ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cilium-ingress
  namespace: kube-system
subsets:
  - addresses:
      - ip: 192.192.192.192
    ports:
      - port: 9999
