manifests/test/cilium/kube-system_batch_v1_cronjob_hubble-generate-certs.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  labels:
    app.kubernetes.io/name: hubble-generate-certs
    app.kubernetes.io/part-of: cilium
    k8s-app: hubble-generate-certs
  name: hubble-generate-certs
  namespace: kube-system
spec:
  concurrencyPolicy: Forbid
  failedJobsHistoryLimit: 1
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            k8s-app: hubble-generate-certs
        spec:
          automountServiceAccountToken: true
          containers:
          - args:
            - --ca-generate=true
            - --ca-reuse-secret
            - --ca-secret-namespace=kube-system
            - --ca-secret-name=cilium-ca
            - --ca-common-name=Cilium CA
            command:
            - /usr/bin/cilium-certgen
            env:
            - name: CILIUM_CERTGEN_CONFIG
              value: |
                certs:
                - name: hubble-server-certs
                  namespace: kube-system
                  commonName: "*.default.hubble-grpc.cilium.io"
                  hosts:
                  - "*.default.hubble-grpc.cilium.io"
                  usage:
                  - signing
                  - key encipherment
                  - server auth
                  - client auth
                  validity: 8760h
                - name: hubble-relay-client-certs
                  namespace: kube-system
                  commonName: "*.hubble-relay.cilium.io"
                  hosts:
                  - "*.hubble-relay.cilium.io"
                  usage:
                  - signing
                  - key encipherment
                  - client auth
                  validity: 8760h
            image: quay.io/cilium/certgen:v0.4.1@sha256:f0c656830e856d26b24b0e144df1f8b327d3b46748d76a630514111fc365b697
            imagePullPolicy: IfNotPresent
            name: certgen
            securityContext:
              allowPrivilegeEscalation: false
              capabilities:
                drop:
                - ALL
          hostNetwork: false
          restartPolicy: OnFailure
          securityContext:
            seccompProfile:
              type: RuntimeDefault
          serviceAccountName: hubble-generate-certs
  schedule: 0 0 1 */4 *
  successfulJobsHistoryLimit: 3
