manifests/test/cilium/kube-system_batch_v1_job_hubble-generate-certs-4a8b800e16.yaml
apiVersion: batch/v1
kind: Job
metadata:
  labels:
    app.kubernetes.io/name: hubble-generate-certs
    app.kubernetes.io/part-of: cilium
    k8s-app: hubble-generate-certs
  name: hubble-generate-certs-4a8b800e16
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        k8s-app: hubble-generate-certs
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --ca-generate=true
        - --ca-reuse-secret
        - --ca-secret-namespace=kube-system
        - --ca-secret-name=cilium-ca
        - --ca-common-name=Cilium CA
        command:
        - /usr/bin/cilium-certgen
        env:
        - name: CILIUM_CERTGEN_CONFIG
          value: |
            certs:
            - name: hubble-server-certs
              namespace: kube-system
              commonName: "*.default.hubble-grpc.cilium.io"
              hosts:
              - "*.default.hubble-grpc.cilium.io"
              usage:
              - signing
              - key encipherment
              - server auth
              - client auth
              validity: 8760h
            - name: hubble-relay-client-certs
              namespace: kube-system
              commonName: "*.hubble-relay.cilium.io"
              hosts:
              - "*.hubble-relay.cilium.io"
              usage:
              - signing
              - key encipherment
              - client auth
              validity: 8760h
        image: quay.io/cilium/certgen:v0.4.6@sha256:511cedee817713fdf72db7e32fffb4b90da7747661b95180064f18198877626c
        imagePullPolicy: IfNotPresent
        name: certgen
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      hostNetwork: false
      restartPolicy: OnFailure
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: hubble-generate-certs
